argocd/platform/10-gatewayclass.app.yaml
"apiVersion": "gateway.networking.k8s.io/v1"
"kind": "GatewayClass"
"metadata":
  "annotations":
    "argocd.argoproj.io/sync-wave": "10"
  "name": "aws-alb"
"spec":
  "controllerName": "gateway.k8s.aws/alb"
