argocd/platform/30-gateway.yaml
"apiVersion": "gateway.networking.k8s.io/v1"
"kind": "Gateway"
"metadata":
  "annotations":
    "alb.ingress.kubernetes.io/certificate-arn": "arn:aws:acm:us-east-1:823899318117:certificate/7c7e1905-c5fe-4586-83ae-840ae6a7d238"
    "alb.ingress.kubernetes.io/ssl-redirect": "443"
    "argocd.argoproj.io/sync-wave": "30"
  "name": "public-gw"
  "namespace": "gateway-system"
"spec":
  "gatewayClassName": "aws-alb-gc"
  "infrastructure":
    "parametersRef":
      "group": "gateway.k8s.aws"
      "kind": "LoadBalancerConfiguration"
      "name": "public-alb-config"
  "listeners":
  - "allowedRoutes":
      "namespaces":
        "from": "All"
    "name": "http"
    "port": 80
    "protocol": "HTTP"
  - "allowedRoutes":
      "namespaces":
        "from": "All"
    "name": "https"
    "port": 443
    "protocol": "HTTPS"
