argocd/platform/argocd-ui.yaml
"apiVersion": "gateway.networking.k8s.io/v1"
"kind": "HTTPRoute"
"metadata":
  "name": "argocd-prod-tgc"
  "namespace": "argocd"
"spec":
  "hostnames":
  - "argocd.senolerd.xyz"
  "parentRefs":
  - "group": "gateway.networking.k8s.io"
    "kind": "Gateway"
    "name": "public-gw"
    "namespace": "gateway-system"
  "rules":
  - "backendRefs":
    - "group": ""
      "kind": "Service"
      "name": "argocd-server"
      "port": 80
      "weight": 1
    "matches":
    - "path":
        "type": "PathPrefix"
        "value": "/"
